USI-77: create Customer domain and persistence
